<resources>
    <string name="app_name">Rule of Three</string>
    <string name="reference_text">If</string>
    <string name="equivalent_text">Equivalent to</string>
    <string name="comparison_text">Then</string>
    <string name="result_text">X</string>
    <string name="clear_btn_text">Reset</string>
    <string name="calc_btn_text">Calculate</string>
    <string name="inverse_btn_text">Inversely proportional</string>
    <string name="back">Back</string>
    <string name="required_txt">Required*</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="credits">Developed by: Maikel Krüger</string>
    <string name="contact">Contact: maikelkruger.dev@gmail.com</string>
    <string name="exit">Exit</string>
</resources>